src/objects/Student__c.object
<CustomObject>
    <description>This is child object of student object</description>
    <fields>
        <fullName>Age__c</fullName>
        <description>Defines age of student</description>
        <label>Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conatact__c</fullName>
        <description>Defines contact no of student</description>
        <label>Conatact</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Email_ID__c</fullName>
        <label>Email ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Defines name of student</description>
        <label>Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeacherID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup field of student</description>
        <label>TeacherID</label>
        <referenceTo>Teacher__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Age__c</columns>
        <columns>Conatact__c</columns>
        <columns>Email_ID__c</columns>
        <columns>Name__c</columns>
        <columns>TeacherID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>